manifests/network-policies/allow-traffic-flow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-swag-to-squid
  namespace: squid
spec:
  podSelector:
    matchLabels:
      app: squid
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: swag
    ports:
    - port: 3128
      protocol: TCP
